[build-system]
requires = ["scikit-build-core","pybind11","setuptools"]
build-backend = "scikit_build_core.build"

[project]
name = "gridworldenvutils"
version = "0.0.1"
description = "Potpourri of utility functions for Gymnasium style gridworld MDPs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.4",
]

[project.optional-dependencies]
dev = [
    "pybind11-stubgen>=2.5.5",
    "pytest>=8.4.2",
]



