[build-system]
requires = ["scikit-build-core","pybind11","setuptools"]
build-backend = "scikit_build_core.build"

[project]
name = "gridworldenvutils"
version = "0.0.3"
description = "Potpourri of utility functions for Gymnasium style gridworld MDPs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"} # Assuming you have a LICENSE file
keywords = ["gridworld", "mdp", "gymnasium", "rl"]
dependencies = [
    "numpy>=1.26.4",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/your-org/gridworldenvutils"


[project.optional-dependencies]
dev = [
    "pybind11-stubgen>=2.5.5",
    "pytest>=8.4.2",
]




[tool.scikit-build.sdist]
include = [
    "/src",
    "CMakeLists.txt",
]